add font styling and navigation arrows

--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -1,2 +1,14 @@
 @use './variables' as *;
 @use './typography' as *;
+
+@mixin tablet {
+    @media (min-width: $tablet-width) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (min-width: $desktop-width) {
+        @content;
+    }
+}
