add assets and style home page

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -28,11 +28,11 @@
     border: none;
     color: white;
     font-size: 1rem;
-    background-color: #9e8db7;
+    background-color: #afa4c2;
   }
 
   &__submit:hover {
-    background-color: #796c8d;
+    background-color: #9589a7;
   }
 }
 
