--- a/src/components/AddNotes/AddNotes.scss
+++ b/src/components/AddNotes/AddNotes.scss
@@ -20,11 +20,11 @@
     margin: 1rem;
     border: none;
     border-radius: 1.8rem;
-    background-color: #9e8db7;
+    background-color: #afa4c2;
   }
 
   &__button:hover {
-    background-color: #7a7288;
+    background-color: #9589a7;
   }
 
   &__button-container {
