--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,13 +3,16 @@
 @use '../../partials/variables' as *;
 
 .home-page {
+    background-image: url('../../assets/images/note-paper-1.avif');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    padding-top: 2rem;
 
   &__header {
     display: flex;
     justify-content: center;
     font-size: 3.2rem;
-    margin: 4rem 0 0 0;
-    padding: 0;
   }
 
   &__subheader {
@@ -26,16 +29,16 @@
   &__button {
     border: none;
     padding: 1rem;
-    background-color: #9e8db7;
+    background-color: #afa4c2;
     border-radius: 2rem;
-    width: 12rem;
-    height: 4rem;
+    width: 10rem;
+    height: 3.8rem;
     font-size: 1.2rem;
     color: white;
   }
 
   &__button:hover {
-    background-color: #796c8d;
+    background-color: #9589a7;
   }
 }
 
