--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -7,6 +7,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
+    min-width: 100vh;
     padding-top: 2rem;
 
   &__header {
