finish styling pages

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -39,10 +39,11 @@
 .search-results {
   display: flex;
   justify-content: flex-start;
+  align-items: flex-end;
   flex-direction: column;
   width: 60%;
   margin: 0 2rem;
-  padding: 0 1rem;
+  padding: 0 2rem 0 2rem;
 
   &__song-details-container {
     display: flex;
@@ -77,7 +78,9 @@
 
 .songs {
   display: flex;
-  margin: 1.2rem 6rem;
+  justify-content: center;
+  margin: 1.2rem 4rem;
+  padding: 0 0 6rem 0;
 }
 
 .song-details {
@@ -144,8 +147,11 @@
 }
 
 .selected-songs {
+  display: flex;
+  flex-direction: column;
   width: 40%;
-  margin: 0 2rem 0 2rem;
+  margin: 0 4rem 0 0;
+  padding: 0 2rem 0 0;
 
   &__header {
     padding: 0 0 1rem 0;
@@ -168,7 +174,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    background-color: rgb(222, 228, 230);
+    background-color: rgba(199, 199, 221, 0.6);
   }
 
   &__artist-name {
@@ -178,13 +184,15 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    background-color: rgb(222, 228, 230);
+    background-color: rgba(199, 199, 221, 0.6);
   }
 
   &__info-container {
     display: flex;
     overflow: hidden;
+    width: 19rem;
     margin: 0.2rem 0 0.4rem 0;
+    overflow: hidden;
   }
 
   &__image {
@@ -208,9 +216,12 @@
   &__button-remove {
     border: none;
     outline: none;
-    width: 12rem;
+    width: 10rem;
     height: 2rem;
-    border-radius: 8px;
+    margin: 0.4rem 0;
+    font-size: 1rem;
+    border-radius: 1rem;
+    color: white;
     background-color: #afa4c2;
   }
 
