--- a/src/pages/MusicPage/MusicPage.scss
+++ b/src/pages/MusicPage/MusicPage.scss
@@ -3,10 +3,10 @@
 @use '../../partials/variables' as *;
 
 .music-page {
-  background-image: url('../../assets/images/blank-white-notepaper-design-vector_53876-161342.avif');
+  background-image: url('../../assets/images/white-crumpled-paper-texture-background-close-up_64749-2573.avif');
   background-size: auto;
   background-repeat: no-repeat;
   min-height: 100vh;
   min-width: 100vh;
-  padding-top: 1.4rem;
+  padding: 1.4rem 0 4rem 0;
 }
