--- a/src/components/Songs/Songs.scss
+++ b/src/components/Songs/Songs.scss
@@ -12,7 +12,7 @@
   }
 }
 
-.selected-songs {
+.scrapbook-songs {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -24,16 +24,16 @@
     display: flex;
     flex-direction: column;
   }
+
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin: 2rem;
+  }
 }
 
-.songs {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: 2rem;
-}
-
-.selected-song {
+.scrapbook-song {
 
   &__song-name {
     padding: 0.2rem;
