adjust background image for music page

--- a/src/pages/MusicPage/MusicPage.scss
+++ b/src/pages/MusicPage/MusicPage.scss
@@ -4,7 +4,7 @@
 
 .music-page {
   background-image: url('../../assets/images/white-crumpled-paper-texture-background-close-up_64749-2573.avif');
-  background-size: auto;
+  background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
   min-width: 100vh;
