adjust background image for scrapbook page

--- a/src/pages/ScrapbookPage/ScrapbookPage.scss
+++ b/src/pages/ScrapbookPage/ScrapbookPage.scss
@@ -4,7 +4,7 @@
 
 .scrapbook-page {
   background-image: url('../../assets/images/crumpled-paper.jpg');
-  background-size: auto;
+  background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
   min-width: 100vh;
