--- a/src/components/Songs/Songs.scss
+++ b/src/components/Songs/Songs.scss
@@ -19,7 +19,7 @@
   margin: 0;
 
   &__song-container {
-    margin: 0 2rem;
+    margin: 0 5rem;
     width: 14rem;
     display: flex;
     flex-direction: column;
@@ -59,22 +59,24 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    width: 17.5rem;
     margin: 0 0 0.4rem 0;
   }
 
   &__image {
-    width: 12rem;
-    height: 12rem;
+    width: 15.7rem;
+    height: 15.2rem;
   }
 
   &__image-container {
-    background-image: url('../../assets/images/cd-case.jpg');
+    background-image: url('../../assets/images/cd-case-2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    padding: 0 0 0.22rem 1.4rem;
-    height: 13rem;
-    width: 14rem;
+    padding: .2rem 0 0.22rem 1.4rem;
+    height: 15.2rem;
+    width: 17.5rem;
+    background-color: beige;
     display: flex;
     justify-content: center;
     align-items: center;
