--- a/src/components/Notes/Notes.scss
+++ b/src/components/Notes/Notes.scss
@@ -20,12 +20,12 @@
   }
 
   &__item-container {
-    margin: 1rem 4rem 0 2rem;
-    padding: 2rem;
+    margin: 1rem 4rem 0 3rem;
+    padding: 1.2rem 1rem 1rem 3rem;
     width: 18rem;
     height: 24rem;
     background-image: url('../../assets/images/loose-leaf-2.webp');
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
   }
 }
