last edit to scrapify before launch

--- a/src/components/AddNotes/AddNotes.scss
+++ b/src/components/AddNotes/AddNotes.scss
@@ -51,14 +51,14 @@
   }
 
   &__form {
-    margin: 2rem;
+    margin: 0rem;
   }
 }
 
 .note {
   display: flex;
   flex-direction: column;
-  margin: 0 1.2rem;
+  margin: 0 1rem 4rem 4rem;
 
   &__input {
     margin: 1rem 0 0 0;
